# singularity

./: .gitignore  .pdm.toml  README.md  gpt.py  main.py  pyproject.toml
gpt_assist/: autocomplete.py  code.py  color_scheme.py  gpt.py  logs.py  pprint.py
singularity/: autocomplete.py  code.py  color_scheme.py  llm.py  logs.py
