[tool.pdm]

[project]
name = "gpt_assist"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = [
    "openai>=0.27.2",
    "python-dotenv>=1.0.0",
    "termcolor>=2.2.0",
    "setuptools>=67.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
gpt_assist = {call = "main:main"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
