[tool.poetry]
name = "gpt-assist"
version = "0.1.0"
description = ""
authors = ["Matt Zhang <set.stun@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_assist"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
