[tool.poetry]
name = "singularity"
version = "0.1.0"
description = ""
authors = ["Matt Zhang <set.stun@gmail.com>"]
readme = "README.md"
packages = [{include = "singularity"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
